pyquest/ql/test/semantic_analysis/invalid/test017.ql
// Incompatible types for or operation
form testForm {
	"First Question"
	someIdentifier : boolean = 10.0 || True
}